# 1c_tlock_analyzer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: call-analyzer.mdc  lock-analyzers.mdc  report-output.mdc
.cursor/skills/call-analyzer/: SKILL.md
call_analyzer/: __init__.py  __main__.py  cli.py
scripts/: report_tlock_slice.py
tdeadlock_analyzer/: cli.py
tests/: test_call_aggregate.py  test_call_context.py  test_call_html.py  test_call_pipeline.py  test_call_tables.py  test_deadlock_parse.py  test_event_report.py  test_file_like_filter.py  test_html_report.py  test_integration_ch.py  test_mcp_clickhouse_config.py  test_no_conflict_report.py  test_normalize_context.py  test_ttimeout_pipeline.py  test_tx_func.py
tj_analyzer/: cli.py
tj_common/: call_context.py  cli_shared.py  models.py  models_call.py  utils.py
tj_common/analysis/: call_aggregate.py  call_pipeline.py  deadlock.py  pipeline.py  progress.py  unified_pipeline.py
tj_common/report/: call_html.py  call_json.py  call_markdown.py  call_tables.py  event_report.py  html.py  json_out.py  markdown.py  text.py
tj_common/sources/: base.py  call_clickhouse.py  call_file.py  clickhouse.py  deadlock_memory.py  memory.py  plain.py  unified_file.py
tlock_analyzer/: cli.py
ttimeout_analyzer/: cli.py
