[project]
name = "1c-tj-analyzers"
version = "0.2.0"
description = "Analyze 1C TLOCK, TTIMEOUT, TDEADLOCK, and CALL tech journal events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
tlock-analyzer = "tlock_analyzer.cli:app_entry"
ttimeout-analyzer = "ttimeout_analyzer.cli:app_entry"
tdeadlock-analyzer = "tdeadlock_analyzer.cli:app_entry"
tj-analyzer = "tj_analyzer.cli:app_entry"
tlock-logcfg = "tlock_logcfg.cli:app_entry"
call-analyzer = "call_analyzer.cli:app_entry"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tj_common", "tlock_analyzer", "ttimeout_analyzer", "tdeadlock_analyzer", "tj_analyzer", "tlock_logcfg", "call_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: live ClickHouse tests"]
